--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mongoose": "^6.6.5",
     "ms": "^2.1.3",
     "node-fetch": "^3.2.10",
-    "node-fetch-cjs": "3.2.10",
+    "node-fetch-cjs": "^3.2.10",
     "pretty-ms": "^7.0.1",
     "super-djs": "^1.7.2",
     "uptime-discord-bot": "^1.0.1-alpha"
